--- a/01/prac1-1.html
+++ b/01/prac1-1.html
@@ -11,6 +11,12 @@
     <script>
         function runButtonPressed() {
             var numbers = [];
+            for (var i = 1; i <= 10; i++) {
+                numbers.push(0);
+            }
+        
+          
+
             //prac1-1 0を10個挿入する
             //prac1-2 乱数を10個挿入する
             //prac1-3 '田中'を10個挿入する
