--- a/01/prac1-1.html
+++ b/01/prac1-1.html
@@ -17,12 +17,18 @@
             //prac1-1 0を10個挿入する
 
 
-            for (var i = 1; i <= 10; i++) {
+            /*for (var i = 1; i <= 10; i++) {
                 var x = Math.floor(Math.random() *10 +1);
+                numbers.push(x);
+            }*/
+            //prac1-2 乱数を10個挿入する
+
+            for (var i = 1; i <= 10; i++) {
+                var x = '田中';
                 numbers.push(x);
             }
 
-            //prac1-2 乱数を10個挿入する
+
 
 
             //prac1-3 '田中'を10個挿入する
