--- a/01/prac1-5.html
+++ b/01/prac1-5.html
@@ -11,11 +11,20 @@
     <script>
         function runButtonPressed() {
             var numbers = [];
+            for (var i = 1; i <= 10; i++) {
+                    numbers.push(i);     
+            }
+
+            show(numbers);
+            for (var j = 0; j < 10; j++) {
+                    numbers[j] = numbers[j]+10;  
+            }
+
             //prac1-5〜 1から10までの数を順に10個挿入する
             show(numbers);
             //prac1-5 全ての要素に10を足す
             //prac1-6 全ての要素に10をかける
-            show(numbers);
+            //show(numbers);
         }
     </script>
 
