--- a/01/prac1-5.html
+++ b/01/prac1-5.html
@@ -17,14 +17,14 @@
 
             show(numbers);
             for (var j = 0; j < 10; j++) {
-                    numbers[j] = numbers[j]+10;  
+                    numbers[j] = numbers[j]*10;  
             }
 
             //prac1-5〜 1から10までの数を順に10個挿入する
-            show(numbers);
+            
             //prac1-5 全ての要素に10を足す
             //prac1-6 全ての要素に10をかける
-            //show(numbers);
+            show(numbers);
         }
     </script>
 
