--- a/01/prac1-7.html
+++ b/01/prac1-7.html
@@ -15,21 +15,22 @@
             //prac1-7 1からNまでの数を順にN個挿入する関数を作る
             //関数名：createSequentialNumbers(array, n)
             //できたら，関数定義をaandd.jsに移す
+
             //prac1-8 N個の乱数を挿入する関数を作る
             //関数名：createRandomNumbers(array, n)
             //できたら，関数定義をaandd.jsに移す
-            createSequentialNumbers(numbers, 5)
+            createRandomNumbers(numbers, 10)
             show(numbers);
         }
 
+        function createRandomNumbers(array, n){
+                for (var i = 1; i <= n; i++) {
+                    var k = Math.floor(Math.random() *10 +1);
+                    array.push(k) ; 
 
-        function createSequentialNumbers(array, n){
-            for (var j = 1; j <= n; j++) {
-                array.push(j)  
             }
-            
-
         }
+
 
       
     </script>
