--- a/06/ex6-2.html
+++ b/06/ex6-2.html
@@ -15,12 +15,23 @@
             stack.push('りんご');
             stack.push('みかん');
             stack.push('ばなな');
+            stack.push('とまと');
 
             show(stack);
 
             show(stack.pop());
             show(stack.pop());
             show(stack.pop());
+
+            if(){
+                
+
+            }
+            else{
+
+            }
+
+
 
             show(stack);
         }
