--- a/06/ex6-4.html
+++ b/06/ex6-4.html
@@ -29,7 +29,9 @@
             //show(verb);
             var noun2 = selectone(nouns);
             //show(noun2);
-            show(noun + 'は' + noun2 +'を'+verb )
+            var numbers = [];
+            
+            show(noun + 'は' + noun2 +'を'+verb );
            
         }
 
