--- a/07/ex7-3.html
+++ b/07/ex7-3.html
@@ -30,11 +30,11 @@
             
         }
 
-        function runAbuttonPressed(){
+        /*function runAbuttonPressed(){
             var bi = document.getElementById('tf2').value;
-            var english = fruits[japanese];
-            document.getElementById('tf1').value = english;
-    }
+            var na = information[bi];
+            document.getElementById('tf1').value = na;
+    }*/
      
 
     </script>
@@ -52,7 +52,6 @@
     <br>
     誕生日：<input id="tf2" type="text" value="">
     <button onclick="runButtonPressed()">検索!(名前→誕生日)</button>
-    <button onclick="runAbuttonPressed()">検索!(誕生日→名前)</button>
     <p id="res"></p>
 </body>
 
