--- a/08/ex8-1.html
+++ b/08/ex8-1.html
@@ -11,13 +11,26 @@
 
     <script>
         function runButtonPressed() {
-            var points = [];
-            points[0] = { x: 100, y: 100 };
-            points[1] = { x: 100, y: 100 };
-            points[2] = { x: 100, y: 100 };
-            document.getElementById('res').innerHTML = JSON.stringify(points, null, '\t');
+           var studentsB ={
+                '黒木': '６月２４日',
+                '粕川': '５月１２日',
+                '西村': '６月２４日',
+                '上島': '６月５日'
+           
+        };
+        var studentsC = [];
+        var keys = Object.keys(studentsB)
+        for(var i = 0;i<keys.length; i++){
+            var key = keys[i];
+            var student = {};
+            student.name = key;
+            student.birthday = studentsB[key];
+            console.log(student);
+            studentsC.push(student);
         }
+        document.getElementById('res').innerHTML = JSON.stringify(studentsC,null,'\t');
 
+    }
     </script>
 
 </head>
